# liflow

./: README.md  pyproject.toml
ckpt/: C_LGPS_0.1.ckpt  C_LGPS_0.2.ckpt  C_LPS.ckpt  C_universal.ckpt  P_LGPS.ckpt  P_LPS.ckpt  P_universal.ckpt
liflow/config/: test.yaml  train.yaml
liflow/data/: dataset.py  modules.py
liflow/experiment/: test.py  train.py
liflow/model/: layers.py  models.py  modules.py
liflow/utils/: analysis.py  ema.py  geometry.py  inference.py  prior.py
notebooks/: prior_classifier.ipynb
scripts/: test_LGPS.py  test_universal.sh  train_LGPS.sh  train_LPS.sh  train_universal.sh
